--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/astra-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>astra-system-frontend</title>
+    <meta
+      name="description"
+      content="ASTRA Distribution System - Streamline your distribution operations"
+    />
+    <title>ASTRA System</title>
   </head>
   <body>
     <div id="root"></div>
